--- a/css/main.css
+++ b/css/main.css
@@ -722,9 +722,9 @@ input.form-error, textarea.form-error, select.form-error {
 }
 
 .team-item__photo {
-  width: 10rem;
+  width: 8rem;
   height: auto;
-  padding: 0.5rem 0.75rem 0.5rem 0.5rem;
+  padding: 0.5rem 1rem 0.5rem 0.5rem;
 }
 
 .team-item__info {
@@ -733,11 +733,15 @@ input.form-error, textarea.form-error, select.form-error {
 }
 
 .team-item__info > p {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .team-item__info > p:first-child {
   padding-top: 0.75rem;
+}
+
+.team-item__bio {
+  font-size:  0.875rem;
 }
 
 /* --------------------------------------------------------------------------*/
