fix some part on styleguide

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 /**
  * Main Stylesheet
  * ---
@@ -30,7 +31,7 @@
   --color-night: #1F1712;
   --color-earth-orange: #FA8232;
   --color-life-green: #41C734;
-  --color-sea-blue: #2209E5;
+  --color-dark-blue: #1377d5;
   --color-magma-red: #EB0000;
   --color-gray-1: #333;
   --color-gray-2: #999;
