--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -230,7 +230,7 @@
 }
 
 .sg-color--sea-blue {
-  background-color: var(--color-sea-blue);
+  background-color: var(--color-dark-blue);
   color: white;
 }
 
