--- a/css/main.css
+++ b/css/main.css
@@ -734,6 +734,11 @@ input.form-error, textarea.form-error, select.form-error {
   background-color: white;
   height: 100%;
 }
+.team-item__content--alt {
+  display: flex;
+  background-color:var(--color-gray-4);
+  height: 100%;
+}
 
 .team-item__photo {
   width: 8rem;
