--- a/css/main.css
+++ b/css/main.css
@@ -556,7 +556,9 @@ input.form-error, textarea.form-error, select.form-error {
 }
 
 .footer__note {
+  margin-top: 0.25rem;
   font-size: 0.75rem;
+  color: rgba(255,255,255,0.3);
 }
 
 /* --------------------------------------------------------------------------*/
