--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -70,6 +70,7 @@
   overflow-y: scroll;
   overflow-x: hidden;
   height: 100%;
+  -webkit-overflow-scrolling: touch; /* Ensure iOS smooth scrolling */
 }
 
 .sg-content-wrap {
